@@ -101,6 +101,7 @@
                 <version>2.19.1</version>
                 <configuration>
                     <skipTests>false</skipTests>
+                    <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
